# work1

./: README.md  main.py  pyproject.toml  test_log.txt  testpullreq.py
external_api/: api.py
src/: decorators.py  generators.py  logger_config.py  masks.py  processing.py  reports.py  services.py  views.py  widget.py
src/reader/: test_excel.py  transaction_xlsx.py  transactions_csv.py  transactions_xlsx.py
tests/: test_CSV.py  test_api.py  test_decorators.py  test_excel.py  test_generators.py  test_log.txt  test_mask.py  test_masks.py  test_processing.py  test_services.py  test_utils.py  test_widget.py
utils/: utils.py
